# francor_levelling_platform

./: CMakeLists.txt  README.md  cubemx_config.ioc  license.md  package.xml
firmware/: .cproject  .mxproject  Levelling_Platform.ebp  firmware.elf.launch  firmware.ioc  main.cpp  mx.scratch
firmware/BNO055/: BNO055.cpp  BNO055.h
firmware/Inc/: FreeRTOSConfig.h  firmware.h  main.h  stm32f1xx_hal_conf.h  usbd_cdc_if.h
firmware/Src/: firmware.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  usbd_cdc_if.c
firmware/USBDevice_STM32F103/USBDevice/: USBEndpoints.h  USBHAL.h  USBHAL_STM32F1.cpp
firmware/USBDevice_STM32F103/USBSerial/: USBCDC.cpp  USBCDC.h  USBSerial.h
firmware/firmware/: firmware.cpp  firmware.h
firmware/mbed/: mbed_config.h
firmware/mbed-STM32F103C8T6/: SysClockConf.cpp
firmware/mbed/.bld/: bldrc
housing/: housing-lvl-bottom.ipt
include/francor_levelling_platform/: LevellingPlatformNode.h  SerialInterface.h
src/: LevellingPlatformNode.cpp  SerialInterface.cpp
